# pokras

./: README.md  pyproject.toml  vercel.json
alembic/versions/: 592de19757ea_initial_migration.py
api/: index.py
pokras/: api.py  app.py  config.py  schemas.py
pokras/db/: engine.py
pokras/modules/country/models/: country.py
pokras/modules/game/models/: game.py
pokras/modules/roll/models/: last_roll.py  tile.py
pokras/static/: index.html  script.js
static/: index.html  script.js  style.css
tests/: test_playwright.py  test_server.py
